--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,6 @@ spring.datasource.username=root
 spring.datasource.password=rootROOT1!
 spring.datasource.url=jdbc:mysql://localhost:3306/eShopDB
 spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create-drop
+
 
