image save to product implanted

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,6 @@ spring.datasource.password=rootROOT1!
 spring.datasource.url=jdbc:mysql://localhost:3306/eShopDB
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create-drop
+server.port=8081
 
 
