--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>2.4.2</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
